fomatting, quote, small css

--- a/projects-wip.html
+++ b/projects-wip.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
@@ -15,45 +16,47 @@
         }
     </style>
 </head>
+
 <body>
-<br>
-<div class="box">
-    <p style="margin-top: 0">
-    <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b></p>
     <br>
-    </p>
+    <div class="box">
+        <p style="margin-top: 0">
+        <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html"
+                    class="inverse-bg">Projects</a></b></p>
+            <br>
+            </p>
 
-    <article>
-        ---
-        <!--			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>-->
-        <table>
-            <tr>
-                <td class="projects-image">
-                    <img src="static/media/projects/synapsbot-avatar.jpg">
-                </td>
-                <td class="projects-text">
-                    <b>Synaps Bot</b><br>
-                    <code class="tags-py">python</code>
-                </td>
-            </tr>
+            <article>
+                ---
+                <!--			<pre><code class="py" style="font-size: 150%">#TODO</code></pre>-->
+                <table>
+                    <tr>
+                        <td class="projects-image">
+                            <img src="static/media/projects/synapsbot-avatar.jpg">
+                        </td>
+                        <td class="projects-text">
+                            <b>Synaps Bot</b><br>
+                            <code class="tags-py">python</code>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/aoe2counters.jpg">
-                </td>
-                <td class="projects-text">
-                    <b>Age of Empires Counter List</b><br>
-                    <code class="tags-sheet">sheets</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/aoe2counters.jpg">
+                        </td>
+                        <td class="projects-text">
+                            <b>Age of Empires Counter List</b><br>
+                            <code class="tags-sheet">sheets</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-            <!--<tr><td class="projects-image">-&#45;&#45;</td><td class="projects-text"></td></tr>
+                    <!--<tr><td class="projects-image">-&#45;&#45;</td><td class="projects-text"></td></tr>
 
             <tr>
                 <td class="projects-image">
@@ -66,104 +69,105 @@
                 </td>
             </tr>-->
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/greenwallet.png">
-                </td>
-                <td class="projects-text">
-                    <b>Green Wallet</b><br>
-                    <code class="tags-webdev">webdev</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/greenwallet.png">
+                        </td>
+                        <td class="projects-text">
+                            <b>Green Wallet</b><br>
+                            <code class="tags-webdev">webdev</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/.png">
-                </td>
-                <td class="projects-text">
-                    <b>ApplicationConfigs</b><br>
-                    <code class="tags-py">python</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/.png">
+                        </td>
+                        <td class="projects-text">
+                            <b>ApplicationConfigs</b><br>
+                            <code class="tags-py">python</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/nextcloudicon.png">
-                </td>
-                <td class="projects-text">
-                    <b>Server</b><br>
-                    <code class="tags-php">php</code>
-                    <code class="tags-shell">shell</code>
-                    <code class="tags-misc">misc</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/nextcloudicon.png">
+                        </td>
+                        <td class="projects-text">
+                            <b>Server</b><br>
+                            <code class="tags-php">php</code>
+                            <code class="tags-shell">shell</code>
+                            <code class="tags-misc">misc</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/redir.JPG">
-                </td>
-                <td class="projects-text">
-                    <b>Search Engine Redirect</b><br>
-                    <code class="tags-javascript">javascript</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/redir.JPG">
+                        </td>
+                        <td class="projects-text">
+                            <b>Search Engine Redirect</b><br>
+                            <code class="tags-javascript">javascript</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">---</td>
-                <td class="projects-text"></td>
-            </tr>
+                    <tr>
+                        <td class="projects-image">---</td>
+                        <td class="projects-text"></td>
+                    </tr>
 
-            <tr>
-                <td class="projects-image">
-                    <img style="display: block;" src="static/media/projects/presence.JPG">
-                </td>
-                <td class="projects-text">
-                    <b>Discord Application Presence</b><br>
-                    <code class="tags-py">python</code>
-                    <code class="tags-shell">shell</code>
+                    <tr>
+                        <td class="projects-image">
+                            <img style="display: block;" src="static/media/projects/presence.JPG">
+                        </td>
+                        <td class="projects-text">
+                            <b>Discord Application Presence</b><br>
+                            <code class="tags-py">python</code>
+                            <code class="tags-shell">shell</code>
 
-                </td>
-            </tr>
+                        </td>
+                    </tr>
 
-        </table>
-    </article>
+                </table>
+            </article>
 
 
-    <div id="footer">
-        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-        ETH / <a
-            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-        ©
-        <script>
-            document.write("" + new Date().getFullYear())
-        </script>
-        - Max Vogel
-    </div>
+            <div id="footer">
+                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+                ETH / <a
+                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 
-</div>
+                <script>
+                    document.write("" + new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
+
+        </div>
 </body>
+
 </html>
