--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
@@ -19,6 +20,7 @@
         .visible {
             display: block;
         }
+
         .hidden {
             display: none;
         }
@@ -26,18 +28,10 @@
 
     <script>
         function toggleImage() {
-        document.getElementById('toggleImage').classList.toggle('hidden');
-    }
-    </script>
-</head>
-<body>
-<br>
-<div class="box">
-    <div class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
-    <div>
-        Hello! I’m Max Vogel. I’m 
+            document.getElementById('toggleImage').classList.toggle('hidden');
+        }
 
-        <script>
+        window.onload = function () {
             var today = new Date();  //initializes to current date
             var bday = new Date();
             bday.setFullYear(2002);
@@ -46,47 +40,58 @@
             bday.setHours(0);
             bday.setMinutes(0);
             var timeDiff = Math.abs(bday.getTime() - today.getTime());
-            document.write("" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365))));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
-        </script>
+            document.getElementById("age").innerHTML = "" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365)));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
+        }
+    </script>
+</head>
 
-        and live in Middleton, WI. <a href="./static/media/IMG_20191020_011042.jpg">Here’s a
-        photo of me at UW’s 2019 Madhacks</a><img src="./static/media/expandoImage.svg" style="height: 1em; vertical-align: middle" onclick="toggleImage()"><img id='toggleImage' src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden">. In my free time I enjoy fencing, coding, CADing, and working on
-        stuff <a href="https://www.team1306.com">1306</a> related.
-    </div>
+<body>
+    <br>
+    <div class="box">
+        <div class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
+            <div>
+                Hello! I’m Max Vogel. I’m <span id="age">18</span> and live in Middleton, WI. <a
+                    href="./static/media/IMG_20191020_011042.jpg">Here’s a photo of me at UW’s 2019 Madhacks</a><img
+                    src="./static/media/expandoImage.svg" class="dropdown" onclick="toggleImage()"><img id='toggleImage'
+                    src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden">. In
+                my free time I enjoy fencing, coding, CADing,
+                and working on stuff <a href="https://www.team1306.com">1306</a> related.
+            </div>
 
-    <div style="padding-top: 2em">
-        <b>Me</b><br>
+            <div style="padding-top: 2em">
+                <b>Me</b><br>
 
-        <div>
-            - Email&emsp;&emsp;&emsp;&emsp;/ <wbr>mehvix <code>at</code> protonmail <code>dot</code> com (<a
-                href="pgp.html">PGP</a>)<br>
-            - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
-            - Discord &emsp;/ Mehvix#7966<br>
-            - Linkedin&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
-            - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
-            - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
+                <div>
+                    - Email&emsp;&emsp;&emsp;&emsp;/ <wbr>mehvix <code>at</code> protonmail <code>dot</code> com (<a
+                        href="pgp.html">PGP</a>)<br>
+                    - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
+                    - Discord &emsp;/ Mehvix#7966<br>
+                    - LinkedIn&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
+                    - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
+                    - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
+                </div>
+            </div>
+
+            <div style="padding-top: 2em">
+                <b>Pages</b><br>
+                - <a href="quotes.html">Quotes</a><br>
+                - <a href="posts/index.html">Posts</a><br>
+                - <a href="projects.html">Projects</a><br>
+                - <a href="todo.html">Todo</a><br>
+                - <a href="serverservices.html">Server Service</a><br>
+            </div>
+
+            <div id="footer">
+                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+                ETH / <a
+                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+
+                <script>
+                    document.write("" + new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
         </div>
-    </div>
-
-    <div style="padding-top: 2em">
-        <b>Pages</b><br>
-        - <a href="quotes.html">Quotes</a><br>
-        - <a href="posts/index.html">Posts</a><br>
-        - <a href="projects.html">Projects</a><br>
-        - <a href="todo.html">Todo</a><br>
-        - <a href="serverservices.html">Server Service</a><br>
-    </div>
-
-    <div id="footer">
-        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-        ETH / <a
-            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-        ©
-        <script>
-            document.write("" + new Date().getFullYear())
-        </script>
-        - Max Vogel
-    </div>
-</div>
 </body>
+
 </html>
