--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
@@ -15,29 +16,32 @@
         }
     </style>
 </head>
+
 <body>
-<br>
-<div class="box">
-    <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html" class="inverse-bg">Projects</a></b><br>
-    </p>
+    <br>
+    <div class="box">
+        <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html"
+                    class="inverse-bg">Projects</a></b><br>
+            </p>
 
-    <article>
+            <article>
 
-        <pre><code class="py" style="font-size: 150%">#TODO</code></pre>
+                <pre><code class="py" style="font-size: 150%">#TODO</code></pre>
 
-    </article>
+            </article>
 
 
-    <div id="footer">
-        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-        ETH / <a
-            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-        ©
-        <script>
-            document.write("" + new Date().getFullYear())
-        </script>
-        - Max Vogel
-    </div>
-</div>
+            <div id="footer">
+                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+                ETH / <a
+                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+
+                <script>
+                    document.write("" + new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
+        </div>
 </body>
+
 </html>
