--- a/serverservices.html
+++ b/serverservices.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
     <link type="text/css" rel="stylesheet" href="static/css/atom-one-dark-reasonable.css">
@@ -15,17 +16,19 @@
         }
     </style>
 </head>
-<body>
-<br>
-<div class="box">
-    <div class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
-        Services</a></b><br></p>
-    <p>
-        <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to invite-only model.
-        Please do not contact me requesting an invite.
-    </p>
 
-    <!--If you're interested in any of these or have any questions, my contact information is on the
+<body>
+    <br>
+    <div class="box">
+        <div class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
+                    Services</a></b><br></p>
+            <p>
+                <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to
+                invite-only model.
+                Please do not contact me requesting an invite.
+            </p>
+
+            <!--If you're interested in any of these or have any questions, my contact information is on the
     <a href="./index.html">home page</a>.
     ---
 
@@ -50,16 +53,17 @@
         </div>-->
 
 
-    <div id="footer">
-        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-        ETH / <a
-            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-        ©
-        <script>
-            document.write("" + new Date().getFullYear())
-        </script>
-        - Max Vogel
-    </div>
-</div>
+            <div id="footer">
+                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+                ETH / <a
+                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+
+                <script>
+                    document.write("" + new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
+        </div>
 </body>
+
 </html>
