--- a/template.html
+++ b/template.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 
     <link type="text/css" rel="stylesheet" href="static/css/style.css">
@@ -8,36 +9,41 @@
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="static/js/include.js"></script>
     <meta charset="utf-8">
-    <title>Mehvix | xxx</title> <!--todo change-->
+    <title>Mehvix | xxx</title>
+    <!--todo change-->
     <style>
         :root {
-            --outside-bg-color: #920909; /* todo change */
+            --outside-bg-color: #920909;
+            /* todo change */
         }
     </style>
 </head>
+
 <body>
-<br>
-<div class="box">
-    <div class="nav"><b>
-        <a href="./index.html">About</a> /
-<!--        <a href="./folder/index.html">folder</a> /-->
-        <a href="#" class="inverse-bg">xxx</a> <!--todo change-->
-    </b></p><br>
+    <br>
+    <div class="box">
+        <div class="nav"><b>
+                <a href="./index.html">About</a> /
+                <!--        <a href="./folder/index.html">folder</a> /-->
+                <a href="#" class="inverse-bg">xxx</a>
+                <!--todo change-->
+            </b></p><br>
 
-    <div>
+            <div>
 
-    </div>
+            </div>
 
-    <div id="footer">
-        BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-        ETH / <a
-            href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-        ©
-        <script>
-            document.write("" + new Date().getFullYear())
-        </script>
-        - Max Vogel
-    </div>
-</div>
+            <div id="footer">
+                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+                ETH / <a
+                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+
+                <script>
+                    document.write("" + new Date().getFullYear())
+                </script>
+                - Max Vogel
+            </div>
+        </div>
 </body>
+
 </html>
