--- a/index.html
+++ b/index.html
@@ -50,35 +50,66 @@
     <div class="box">
         <div class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
             <div>
-                Hello! I’m Max Vogel. I’m <span id="age">18</span> and live in Middleton, WI. <a
-                    href="./static/media/IMG_20191020_011042.jpg">Here’s a photo of me at UW’s 2019 Madhacks</a><img
+                Hello! I’m Max Vogel and live in Middleton, WI. Here’s a <a
+                    href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img
                     src="./static/media/expandoImage.svg" class="dropdown" onclick="toggleImage()"><img id='toggleImage'
-                    src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden">. In
-                my free time I enjoy fencing, coding, CADing,
-                and working on stuff <a href="https://www.team1306.com">1306</a> related.
+                    src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden"> at
+                UW-Madhacks 2019. In my free time I enjoy fencing, coding, CADing, <a
+                    href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ">listening
+                    to music</a>, and working <a href="https://www.team1306.com">1306</a> stuff.
             </div>
 
             <div style="padding-top: 2em">
-                <b>Me</b><br>
+                <b>Me</b>
 
                 <div>
-                    - Email&emsp;&emsp;&emsp;&emsp;/ <wbr>mehvix <code>at</code> protonmail <code>dot</code> com (<a
-                        href="pgp.html">PGP</a>)<br>
-                    - Github&emsp;&emsp;&emsp;/ <a href="https://github.com/mehvix">Mehvix</a><br>
-                    - Discord &emsp;/ Mehvix#7966<br>
-                    - LinkedIn&emsp;/ <a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a><br>
-                    - Keybase&emsp;&emsp;/ <a href="https://keybase.io/mehvix">Mehvix</a><br>
-                    - Resumé&emsp;&emsp;&emsp;/ <a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a>
+                    <table class="about"><tbody>
+                        <tr>
+                            <td>Email</td>
+                            <td>mehvix <code>at</code> protonmail <code>dot</code> com (<a
+                                href="pgp.html">PGP</a>)<br></td>
+                        </tr>
+                        <tr>
+                            <td>GitHub</td>
+                            <td><a href="https://github.com/mehvix">Mehvix</a></td>
+                        </tr>
+                        <tr>
+                            <td>Discord</td>
+                            <td>Mehvix#7966</td>
+                        </tr>
+                        <tr>
+                            <td>LinkedIn</td>
+                            <td><a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a></td>
+                        </tr>
+                        <tr>
+                            <td>Resumé</td>
+                            <td><a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a></td>
+                        </tr>
+                    </tbody></table>
                 </div>
             </div>
 
             <div style="padding-top: 2em">
-                <b>Pages</b><br>
-                - <a href="quotes.html">Quotes</a><br>
-                - <a href="posts/index.html">Posts</a><br>
-                - <a href="projects.html">Projects</a><br>
-                - <a href="todo.html">Todo</a><br>
-                - <a href="serverservices.html">Server Service</a><br>
+                <b>Pages</b>
+
+                <table class="about"><tbody>
+                    <tr>
+                        <td><a href="posts/index.html">Blog</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="quotes.html">Quotes</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="projects.html">Projects</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="todo.html">Todo-list</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="serverservices.html">Server</a></td>
+                    </tr>
+                </tbody></table>
+
             </div>
 
             <div id="footer">
