--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <table class="about"><tbody>
                     <tr>
-                        <td><a href="posts/index.html">Blog</a></td>
+                        <td><a href="posts/index.html">Blog</a> (<a href="posts/rss.xml">RSS</a>)</td>
                     </tr>
                     <tr>
                         <td><a href="quotes.html">Quotes</a></td>
