--- a/projects-wip.html
+++ b/projects-wip.html
@@ -18,10 +18,9 @@
 </head>
 
 <body>
-    <br>
     <div class="box">
         <p style="margin-top: 0">
-        <div class="nav"><b><a href="./index.html">About</a> / <a href="projects.html"
+        <div class="nav"><b><a href="./index.html">~</a> / <a href="projects.html"
                     class="inverse-bg">Projects</a></b></p>
             <br>
             </p>
