--- a/template.html
+++ b/template.html
@@ -20,10 +20,9 @@
 </head>
 
 <body>
-    <br>
     <div class="box">
         <div class="nav"><b>
-                <a href="./index.html">About</a> /
+                <a href="./index.html">~</a> /
                 <!--        <a href="./folder/index.html">folder</a> /-->
                 <a href="#" class="inverse-bg">xxx</a>
                 <!--todo change-->
