--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         .hidden {
             display: none;
         }
+
+
+        h3 {
+            margin-bottom: 0%;
+        }
     </style>
 
     <script>
@@ -31,43 +36,45 @@
             document.getElementById('toggleImage').classList.toggle('hidden');
         }
 
-        window.onload = function () {
-            var today = new Date();  //initializes to current date
-            var bday = new Date();
-            bday.setFullYear(2002);
-            bday.setMonth(7 - 1);  //January is 0
-            bday.setDate(27);
-            bday.setHours(0);
-            bday.setMinutes(0);
-            var timeDiff = Math.abs(bday.getTime() - today.getTime());
-            document.getElementById("age").innerHTML = "" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365)));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
-        }
+        // window.onload = function () {
+        //     var today = new Date();  //initializes to current date
+        //     var bday = new Date();
+        //     bday.setFullYear(2002);
+        //     bday.setMonth(7 - 1);  //January is 0
+        //     bday.setDate(27);
+        //     bday.setHours(0);
+        //     bday.setMinutes(0);
+        //     var timeDiff = Math.abs(bday.getTime() - today.getTime());
+        //     document.getElementById("age").innerHTML = "" + Math.floor(timeDiff / ((1000 * 60 * 60 * 24 * 365)));  // ceil time in years ([milliseconds] * [seconds] * [min] * [hours] * [days])
+        // }
     </script>
 </head>
 
 <body>
-    <br>
     <div class="box">
-        <div class="nav"><b><a href="./index.html" class="inverse-bg">About</a></b><br></p>
+        <div class="nav">
+            <strong><a href="./" class="inverse-bg">Home</a></strong>
+        </div>
+        <div>
+            Hello! I’m Max Vogel and live in Middleton, WI. Here’s a <a
+                href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img src="./static/media/expandoImage.svg"
+                class="dropdown" onclick="toggleImage()"><img id='toggleImage'
+                src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden"> at
+            UW-Madhacks 2019. In my free time I enjoy fencing, coding, CADing, <a
+                href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ">listening
+                to music</a>, and working <a href="https://www.team1306.com">1306</a> stuff.
+        </div>
+
+        <div style="padding-top: 1em">
+            <h2>Me</h2>
+
             <div>
-                Hello! I’m Max Vogel and live in Middleton, WI. Here’s a <a
-                    href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img
-                    src="./static/media/expandoImage.svg" class="dropdown" onclick="toggleImage()"><img id='toggleImage'
-                    src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden"> at
-                UW-Madhacks 2019. In my free time I enjoy fencing, coding, CADing, <a
-                    href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ">listening
-                    to music</a>, and working <a href="https://www.team1306.com">1306</a> stuff.
-            </div>
-
-            <div style="padding-top: 2em">
-                <b>Me</b>
-
-                <div>
-                    <table class="about"><tbody>
+                <table class="about">
+                    <tbody>
                         <tr>
                             <td>Email</td>
-                            <td>mehvix <code>at</code> protonmail <code>dot</code> com (<a
-                                href="pgp.html">PGP</a>)<br></td>
+                            <td>mehvix <code>at</code> protonmail <code>dot</code> com (<a href="pgp.html">PGP</a>)<br>
+                            </td>
                         </tr>
                         <tr>
                             <td>GitHub</td>
@@ -85,16 +92,18 @@
                             <td>Resumé</td>
                             <td><a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a></td>
                         </tr>
-                    </tbody></table>
-                </div>
+                    </tbody>
+                </table>
             </div>
+        </div>
 
-            <div style="padding-top: 2em">
-                <b>Pages</b>
+        <div style="padding-top: 1em">
+            <h2>Pages</h2>
 
-                <table class="about"><tbody>
+            <table class="about">
+                <tbody>
                     <tr>
-                        <td><a href="posts/index.html">Blog</a> (<a href="posts/rss.xml">RSS</a>)</td>
+                        <td><a href="posts">Blog</a> (<a href="posts/rss.xml">RSS</a>)</td>
                     </tr>
                     <tr>
                         <td><a href="quotes.html">Quotes</a></td>
@@ -108,21 +117,22 @@
                     <tr>
                         <td><a href="serverservices.html">Server</a></td>
                     </tr>
-                </tbody></table>
+                </tbody>
+            </table>
 
-            </div>
-
-            <div id="footer">
-                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-                ETH / <a
-                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-
-                <script>
-                    document.write("" + new Date().getFullYear())
-                </script>
-                - Max Vogel
-            </div>
         </div>
+
+        <div id="footer">
+            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+            ETH / <a
+                href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+
+            <script>
+                document.write("" + new Date().getFullYear())
+            </script>
+            - Max Vogel
+        </div>
+    </div>
 </body>
 
 </html>
