--- a/mc.html
+++ b/mc.html
@@ -18,9 +18,8 @@
 </head>
 
 <body>
-    <br>
     <div class="box">
-        <div class="nav"><b><a href="./index.html">About</a> / <a href="./serverservices.html">Server</a> / <a
+        <div class="nav"><b><a href="./index.html">~</a> / <a href="./serverservices.html">Server</a> / <a
                     href="projects.html" class="inverse-bg">mc</a></b></p>
             <code>mc.mehvix.com:25544</code><br><br>
             <video style="width: 100%" src="./static/media/synapsmc.webm" controls autoplay>
