--- a/pgp.html
+++ b/pgp.html
@@ -42,14 +42,17 @@
 </head>
 
 <body>
-    <br>
     <div class="box">
-        <div class="nav"><b><a href="./index.html">About</a> / <a href="pgp.html" class="inverse-bg">PGP</a></b><br>
-            <p>---</p>
-            <a href="./static/media/publickey.mehvix@protonmail.com.asc">Download</a><br>
-            <a href="#" onclick="copyText()">Copy</a>
+        <div class="nav">
+            <a href="./index.html">~</a> /
+            <strong><a href="pgp.html" class="inverse-bg">PGP</a></strong>
+        </div>
 
-            <pre><code id="pgp" class="diff">-----BEGIN PGP PUBLIC KEY BLOCK-----
+        <a href="./static/media/publickey.mehvix@protonmail.com.asc">Download</a><br>
+        <a href="#" onclick="copyText()">Copy</a>
+        <pre><code class="Makefile">curl -L https://mehvix.com/static/media/publickey.mehvix@protonmail.com.asc | gpg --import</code></pre>
+        <p>---</p>
+        <pre><code id="pgp" class="diff">-----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: OpenPGP.js v4.6.2
 Comment: https://openpgpjs.org
 
@@ -84,17 +87,17 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
 -----END PGP PUBLIC KEY BLOCK-----</code></pre>
 
 
-            <div id="footer">
-                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-                ETH / <a
-                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
+        <div id="footer">
+            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+            ETH / <a
+                href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 
-                <script>
-                    document.write("" + new Date().getFullYear())
-                </script>
-                - Max Vogel
-            </div>
+            <script>
+                document.write("" + new Date().getFullYear())
+            </script>
+            - Max Vogel
         </div>
+    </div>
 </body>
 
 </html>
