--- a/serverservices.html
+++ b/serverservices.html
@@ -8,7 +8,7 @@
     <script src="static/js/include.js"></script>
 
     <meta charset="utf-8">
-    <title>Mehvix | Cloud</title>
+    <title>Mehvix | Server</title>
     <style>
         :root {
             --outside-bg-color: #2770c0;
@@ -18,17 +18,18 @@
 </head>
 
 <body>
-    <br>
     <div class="box">
-        <div class="nav"><b><a href="./index.html">About</a> / <a href="serverservices.html" class="inverse-bg">Server
-                    Services</a></b><br></p>
-            <p>
-                <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to
-                invite-only model.
-                Please do not contact me requesting an invite.
-            </p>
+        <div class="nav">
+            <a href="./index.html">~</a> /
+            <strong><a href="serverservices.html" class="inverse-bg">Server</a></strong>
+        </div>
 
-            <!--If you're interested in any of these or have any questions, my contact information is on the
+        <p>
+            <a href="https://cloud.mehvix.com">cloud.mehvix.com</a>, as well as all other services, have moved to
+            invite-only model. Please do not contact me requesting an invite.
+        </p>
+
+        <!--If you're interested in any of these or have any questions, my contact information is on the
     <a href="./index.html">home page</a>.
     ---
 
@@ -51,19 +52,17 @@
             the game servers I have experience configuring. If you are an experienced user I'll also give you the login
             credentials. $5.00 gets you 16 players slots (and 2 GB RAM for MC).
         </div>-->
+        <div id="footer">
+            BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
+            ETH / <a
+                href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 
-
-            <div id="footer">
-                BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
-                ETH / <a
-                    href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
-
-                <script>
-                    document.write("" + new Date().getFullYear())
-                </script>
-                - Max Vogel
-            </div>
+            <script>
+                document.write("" + new Date().getFullYear())
+            </script>
+            - Max Vogel
         </div>
+    </div>
 </body>
 
 </html>
