header stuff, nc style

--- a/404.html
+++ b/404.html
@@ -16,14 +16,16 @@
 
 <body>
     <div class="box">
-        <h2>404!</h2>
-        <p>File not found. If you think this should exist, reach out to me: my contact info is on the home page.<br><br>
-        </p>
-        <h3 style="text-align: center"><a href="https://mehvix.com">Return home.</a></h3>
-        <!--uhhh i'm lazy this works-->
+        <div class="nav">
+            <a href="https://mehvix.com">~</a> /
+            <strong><a href="" class="inverse-bg">404</a></strong>
+        </div>
 
-        <h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>
+        <p>File not found. If you think this should exist, reach out to me (my contact info is on the home page).
 
+        <h1 style="text-align: center"><a href="https://mehvix.com">Return home.</a></h1>
+
+        <h1 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h1>
 
         <div id="footer">
             BTC / <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a><br>
