--- a/projects-wip.html
+++ b/projects-wip.html
@@ -19,11 +19,10 @@
 
 <body>
     <div class="box">
-        <p style="margin-top: 0">
-        <div class="nav"><b><a href="./index.html">~</a> / <a href="projects.html"
-                    class="inverse-bg">Projects</a></b></p>
-            <br>
-            </p>
+        <div class="nav">
+            <a href="./index.html">~</a> /
+            <strong><a href="#" class="inverse-bg">Projects</a></strong>
+        </div>
 
             <article>
                 ---
