--- a/pgp.html
+++ b/pgp.html
@@ -47,14 +47,13 @@
             <a href="./index.html">~</a> /
             <strong><a href="pgp.html" class="inverse-bg">PGP</a></strong>
         </div>
-
-        <a href="./static/media/publickey.mehvix@protonmail.com.asc">Download</a><br>
+        <a href="./static/media/publickey.mehvix@protonmail.com.asc">Download from mehvix.com</a><br>
+        <a href="https://api.protonmail.ch/pks/lookup?op=get&search=mehvix@protonmail.com">Download from Protonmail API</a><br>
         <a href="#" onclick="copyText()">Copy</a>
         <pre><code class="Makefile">curl -L https://mehvix.com/static/media/publickey.mehvix@protonmail.com.asc | gpg --import</code></pre>
         <p>---</p>
         <pre><code id="pgp" class="diff">-----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: OpenPGP.js v4.6.2
-Comment: https://openpgpjs.org
+Version: ProtonMail
 
 xsBNBFwGCl4BCACpgPGL6hTyM+t9CloUGX8e2SLPAxtvLPlsrPoDS81cMEhQ
 1/E4fgATyfvsXQoK/3j9G9X/rjltAlrky7oUSLqPITqKQCF16NFOlJCki9d4
