--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden"> at
             UW-Madhacks 2019. In my free time I enjoy fencing, coding, CADing, <a
                 href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ">listening
-                to music</a>, and working <a href="https://www.team1306.com">1306</a> stuff.
+                to music</a>, and working on <a href="https://www.team1306.com">1306</a> stuff.
         </div>
 
         <div style="padding-top: 1em">
