--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
                         <td><a href="quotes.html">Quotes</a></td>
                     </tr>
                     <tr>
-                        <td><a href="projects.html">Projects</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="todo.html">Todo-list</a></td>
+                        <td><a href="todo.html">Projects TODO</a></td>
                     </tr>
                     <tr>
                         <td><a href="serverservices.html">Server</a></td>
