--- a/todo.html
+++ b/todo.html
@@ -24,6 +24,7 @@
 
         h1 {
             font-size: 105%;
+            font-weight: 500;
             margin-bottom: .1em;
             margin-top: 1em;
         }
@@ -36,12 +37,12 @@
             <a href="./index.html">~</a> /
             <strong><a href="todo.html" class="inverse-bg">#TODO</a></strong>
         </div>
-        <p>My mostly up-to-date list of future projects I haven't gotten around to yet.</p>
+        <p>A backlog of future projects I haven't gotten around to yet.</p>
         ---
         </p>
 
         <article>
-            <h1>Program to automatically download videos from a creator as they're uploaded</h1>
+            <h1>Program to automatically download videos from YouTube as they're uploaded</h1>
             <p>Prevents <a
                     href="https://old.reddit.com/r/Jon_Bois/comments/ab6930/does_anyone_happen_to_have_pretty_good_episode_4/">this</a>
                 from happening again.
@@ -72,7 +73,7 @@
             <h1>Successfully 3D print a key</h1>
             <p><a href="https://youtu.be/7kJnGZlirpI">Interesting talk on 3D printing keys</a></p>
 
-            <h1><strike>Software + </strike>Hardware keylogger</h1>
+            <h1>Hardware keylogger</h1>
 
             <h1>Crypto address replacer</h1>
             <p>Replaces copied crypto address with a different address<br>
@@ -83,11 +84,27 @@
             <p>Integrate with <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a></p>
 
             <h1>"Jon Bois" style video about Richard Russel</h1>
-            <p><a href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident">Wikipedia Article</a>
-            </p>
-            <p><a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's
-                    Pretty
-                    Good Series</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident">Wikipedia Article</a></p>
+            <p><a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty Good
+                    Series</a></p>
+
+            <h1>Righ to Repair cite</h1>
+            <p>Similas to net neutrality site concept</p>
+
+            <h1>Typeracer bot</h1>
+
+            <h1>Chess / Poker AI</h1>
+
+            <h1>Write about completed projects and other topics</h1>
+            <p>How and why to learn Colemak</p>
+            <p>How and why to learn morse code</p>
+            <p>Instagram login "lock" exploit</p>
+            <p>Why to care about privacy</p>
+            <p>Why to care about Right to Repair</p>
+            <p>How to protect your digital privacy</p>
+            <p>CalyxOS</p>
+            <p></p>
+
         </article>
 
         <!--			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>-->
